spade-tests/src/snapshots/spade_tests__parser__unit_value_fails_gracefully.snap
---
source: spade-tests/src/parser.rs
---
fn a() -> bool {
    ()
}

error: Tuples with no elements are not supported
  ┌─ testinput:2:5
  │
2 │     ()
  │     ^^


